--- a/frontend/frontend.ipynb
+++ b/frontend/frontend.ipynb
@@ -7,7 +7,7 @@
     "# Frontend Demonstration\n",
     "These are two examples of a frontend for your project, but don't limit yourself to this example. Think about what kind of interface makes the most sense for your application and branch out on Google to look for any libraries that you think look fun to learn and useful for your application.\n",
     "\n",
-    "> * **NOTE**: Your frontend will need to use more of your API endpoints than mine does, but this should help you get started if you want to use a similar method*"
+    "> * **NOTE**: Your frontend will need to use more of your API endpoints than mine does, but this should help you get started if you want to use a similar method"
    ]
   },
   {
